--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,12 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2025.04.01"
+material = "1.12.0"
 navCompose        = "2.8.9"
 viewModelCompose  = "2.8.7"
+room   = "2.7.1"
+ksp    = "2.0.21-1.0.27"
+datastorePreferences = "1.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -28,10 +32,15 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation-compose        = { group = "androidx.navigation", name = "navigation-compose",        version.ref = "navCompose" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewModelCompose" }
+material = { module = "com.google.android.material:material", version.ref = "material" }
+androidx-room-runtime   = { group = "androidx.room",     name = "room-runtime",   version.ref = "room" }
+androidx-room-ktx       = { group = "androidx.room",     name = "room-ktx",       version.ref = "room" }
+androidx-room-compiler  = { group = "androidx.room",     name = "room-compiler",  version.ref = "room" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePreferences" }
 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
